# anydesk-test

./: .env  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
backend/.sqlx/: query-0ae7ad0e3ada6e74dde264845e272eb2a1e00ad628f525bf5661e9861e9471eb.json  query-10655495c6770dca135deb22c238029e7aaf73409043c0575da86b2f60133dad.json  query-15078e0481ea293c342aff67bcee1bc4f52d53a130933692b91eaabfd82ba956.json  query-42c7c91bd4404cb5ba589ba62697223b5a22efcefa924a198385f16071a11fa6.json  query-5b29673e6b3c9fd7acb82d9d7e962718562b6ee72fb7c99003e1ce995c7d4e0a.json  query-822b9250eb77600c3a6b1780deeaafa344e2f465cbe86690028b33f82aae8ed3.json  query-86c08e1bd8783abd8994cc31e921b68afd01d7e2f81412e4c114c188f1a2d93d.json  query-8c9f8dae5e8c21b6339039a686a15a81d5a097313da906c7a0d676d411f060cf.json  query-c5d2d77611cef2d28ba1ac0efb3cefa1bd9f481a3919241952c339e84753ce88.json  query-cf6fbf1b9353ed0a099b17e9b30d2688ab2ee5e55a254f180e408c8f592aa507.json  query-db1712f7ea0928cc0ce9b83e4dc19ea8ffdcabf4e3656792bff8e7edc5348779.json  query-fff3653750929afc74a35ed839488532334cdf62b518ec0058cb99ce61bf991e.json
backend/migrations/: 001_create_users_and_tasks.sql  002_test_data.sql
backend/src/: api_error.rs  apidoc.rs  app_state.rs  lib.rs  main.rs
backend/src/features/tasks/: handler.rs  mod.rs  model.rs  repo.rs  service.rs  tests.rs
backend/src/features/users/: handler.rs  mod.rs  model.rs  repo.rs  service.rs  tests.rs
backend/tests/: _helpers.rs  users_tests.rs
frontend/: Dockerfile  README.md  eslint.config.ts  index.html  (+4 more)
(+27 files in other folders)
